# arenaparser

./: .gitignore  Cargo.toml  README.md
.github/workflows/: checks.yml  ci.yml
ap_core/: Cargo.toml
ap_core/src/: arena_event_parser.rs  cards.rs  deck.rs  lib.rs  match_insights.rs  processor.rs  replay.rs  storage_backends.rs
ap_core/src/models/: deck.rs  match_result.rs  mod.rs  mtga_match.rs  mulligan.rs
ap_core/src/mtga_events/: business.rs  client.rs  gre.rs  mgrsc.rs  mod.rs  primitives.rs
ap_core/tests/: test_primitives.rs
arenaparser_cli/: Cargo.toml
arenaparser_cli/src/: main.rs  processor.rs
arenaparser_gui/: Cargo.toml
arenaparser_gui/src/: main.rs
arenaparser_replay/: Cargo.toml
arenaparser_replay/src/: main.rs  match_event_handler.rs
data/: cards.json  process.py
src/: arena_event_parser.rs  client_event.rs  gre.rs  main.rs  match_event_handler.rs  processor.rs
src/mtga_events/: client.rs  gre.rs  mgrc_event.rs
