[workspace]
default-members = ["ap_core", "arenaparser_cli"]
members = ["ap_core", "arenaparser_cli", "arenaparser_gui"]
resolver = "2"

[workspace.package]
authors = ["Grant Azure <azure.grant@gmail.com>"]
categories = []
version = "0.1.0"
repository = "https://github.com/gazure/arenaparser"
edition = "2021"
keywords = ["magic"]
license = "Apache-2.0 OR MIT"


[workspace.dependencies]
anyhow = "1.0.82"
crossbeam = "0.8.0"
ctrlc = "3.4.4"
clap = { version = "4.5.4", features = ["derive"] }
derive_builder = "0.20.0"
lazy_static = "1.4.0"
notify = "6.1.1"
encoding_rs = "0.8.34"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
eframe = { version = "0.27.2", features = [
    "default",
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }
rfd = "0.14.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
rusqlite_migration = { version = "1.2.0", features = ["from-directory"] }
include_dir = "0.7.3"
