[workspace]
default-members = ["ap_core", "arenaparser_cli"]
members = ["ap_core", "arenaparser_cli"]
resolver = "2"

[workspace.package]
authors = ["Grant Azure <azure.grant@gmail.com>"]
categories = []
version = "0.1.4"
repository = "https://github.com/gazure/arenaparser"
edition = "2021"
keywords = ["magic"]
license = "Apache-2.0 OR MIT"


[workspace.dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.38", features = ["serde"] }
crossbeam = "0.8.0"
ctrlc = "3.4.4"
clap = { version = "4.5.4", features = ["derive"] }
derive_builder = "0.20.0"
itertools = "0.13.0"
lazy_static = "1.4.0"
notify = "6.1.1"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
rusqlite_migration = { version = "1.2.0", features = ["from-directory"] }
include_dir = "0.7.3"
