[package]
name = "arenaparser_cli"
authors.workspace = true
categories.workspace = true
description = "parse player.log to match.json files"
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
crossbeam = { workspace = true }
serde = { workspace = true, features = ["derive"]}
serde_json = {workspace = true}
ap_core = { path = "../ap_core", version = "0.1.0" }

[[bin]]
name = "arenaparser"
path = "src/main.rs"