[package]
name = "arenaparser_gui"
authors.workspace = true
categories.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ap_core = { path = "../ap_core" }
serde_json = {workspace = true}
anyhow = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"]}