[package]
name = "arenaparser_replay"
authors.workspace = true
categories.workspace = true
version.workspace = true
repository.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
ap_core = { path = "../ap_core", version = "0.1.0" }
clap = { workspace = true }
bevy = { workspace = true }
crossbeam = { workspace = true }
bevy_crossbeam_event = {workspace = true}
ctrlc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
